# rootba

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  ACKNOWLEDGEMENTS  AUTHORS  CHANGELOG  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  build_docker.yml  build_docker_images.yml
ci/docker/: Dockerfile_18.04  Dockerfile_20.04  Dockerfile_22.04  build.sh
ci/scripts/: docker-setup-ccache.sh  install-dependencies.sh
cmake/: PreventInSourceBuild.cmake  SetupDependencies.cmake  Utils.cmake
cmake/modules/: FindGlog.cmake
docs/: BatchEvaluationTutorial.md  Configuration.md  PoBATutorial.md
docs/scripts/: generate-pdf-previews.sh
examples/batch/: experiments-cvpr-supplementary.toml  experiments-cvpr.toml  experiments-poba.toml  experiments-tutorial.toml  gitattributes  gitignore  poba_batch_config.toml  rootba_batch_config.toml
examples/config/: rootba_config_default.toml  rootba_config_example.toml
python/rootba/: __init__.py  experiments.py  generate_tables.py  log.py  metric.py  plot_logs.py  run.py  util.py
python/rootba/latex/: containers.py  overview_table.py  performance_profiles.py  plot.py  results_table.py  summarize_sequences_table.py  templates.py  util.py
scripts/: build-external.sh  build-rootba.sh  clang-format-all.sh  clang-tidy-all.sh  download-bal-problems.sh  generate-batch-configs.py  generate-tables.py  list-jobs.sh  plot-logs.py  query-config.py  rerun-failed-in.sh  rerun-one-in.sh  run-all-in.sh  run-one.sh  show-sparsity.py  slurm-list-jobs.sh  update-license-headers.sh  yapf-all.sh
scripts/num_ops/: bal_numbers.csv  compute_num_ops.py  compute_num_ops_example.py  compute_num_ops_latex.py  compute_num_ops_symbolic.py  operation_counts.py
scripts/templates/: license-py-sh.tmpl
scripts/utils/: on-slurm-detect-cpu.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  bal.cpp  bal_ceres.cpp  bal_gui.cpp  bal_qr.cpp  bal_sc.cpp
src/rootba/: CMakeLists.txt
src/rootba/bal/: CMakeLists.txt  ba_log.cpp  ba_log.hpp  ba_log_options.hpp  ba_log_utils.cpp  ba_log_utils.hpp  bal_app_options.hpp  bal_bundle_adjustment_helper.cpp  bal_bundle_adjustment_helper.hpp  bal_bundle_adjustment_helper.test.cpp  bal_dataset_options.hpp  bal_pipeline_summary.hpp  bal_problem.cpp  bal_problem.hpp  bal_problem_io.hpp  bal_problem_io.test.cpp  bal_residual_options.hpp  common_types.hpp  residual_info.cpp  residual_info.hpp  snavely_projection.hpp  snavely_projection.test.cpp  solver_options.cpp  solver_options.hpp
src/rootba/ceres/: CMakeLists.txt  ba_log_utils.cpp  ba_log_utils.hpp  bal_bundle_adjustment.cpp  bal_bundle_adjustment.hpp  bal_iteration_callback.cpp  bal_iteration_callback.hpp  bal_residuals.hpp  loss_function.cpp  loss_function.hpp  option_utils.cpp  option_utils.hpp  types.hpp
src/rootba/cg/: CMakeLists.txt  block_sparse_matrix.hpp  block_sparse_matrix.test.cpp  conjugate_gradient.hpp  preconditioner.hpp  preconditioner.test.cpp  utils.hpp
src/rootba/cli/: CMakeLists.txt  bal_cli_utils.cpp  bal_cli_utils.hpp  cli_options.cpp  cli_options.hpp
src/rootba/options/: CMakeLists.txt  enum_ref.hpp  flags_ref.hpp  options_interface.cpp  options_interface.hpp  visitable_options.hpp  wise_enum_ref.hpp
src/rootba/pangolin/: CMakeLists.txt  bal_image_overlay.cpp  bal_image_overlay.hpp  bal_map_display.cpp  bal_map_display.hpp  gui_helpers.cpp  gui_helpers.hpp
src/rootba/qr/: CMakeLists.txt  landmark_block.cpp  landmark_block.hpp  landmark_block_base.hpp  landmark_block_dynamic.hpp  landmark_block_static.hpp  linearization_qr.hpp  linearization_qr.test.cpp  linearization_utils.hpp
src/rootba/qr/impl/: landmark_block_base.ipp  landmark_block_dynamic.cpp  landmark_block_static_2.cpp  landmark_block_static_3.cpp  landmark_block_static_4.cpp  landmark_block_static_5.cpp  landmark_block_static_6.cpp  landmark_block_static_7.cpp  landmark_block_static_8.cpp
src/rootba/sc/: CMakeLists.txt  landmark_block.hpp  linearization_power_sc.hpp  linearization_power_sc.test.cpp  linearization_sc.hpp
src/rootba/solver/: CMakeLists.txt  bal_bundle_adjustment.cpp  bal_bundle_adjustment.hpp  bal_bundle_adjustment.test.cpp  linearizor.cpp  linearizor.hpp  linearizor_base.cpp  linearizor_base.hpp  linearizor_power_sc.cpp  linearizor_power_sc.hpp  linearizor_qr.cpp  linearizor_qr.hpp  linearizor_sc.cpp  linearizor_sc.hpp  solver_summary.hpp
src/rootba/testing/: CMakeLists.txt  eigen_utils.hpp  float_utils.hpp  test_jacobian.hpp  test_types.hpp
src/rootba/util/: CMakeLists.txt  assert.hpp  cast.hpp  container_traits.hpp  eigen_types.hpp  enum_utils.hpp  format.hpp  json_utils.hpp  own_or_reference.hpp  own_or_reference.test.cpp  pprint_utils.hpp  serialization.hpp  stl_utils.hpp  stl_utils.test.cpp  system_utils.cpp  system_utils.hpp  system_utils.test.cpp  tbb_utils.cpp  tbb_utils.hpp  template_utils.hpp  test_io_utils.hpp  test_utils.hpp  time_utils.hpp  toml_utils.hpp  typesafe_utils.hpp  visit_struct_utils.hpp
test/: CMakeLists.txt
test/smoke_tests/: test_bal.sh  test_bal_ceres.sh  test_bal_qr.sh  test_bal_sc.sh
